// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-krvtoX iGMYyN"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-fONwsr efNtcV fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-hMFtBS cxFERH"
  >
    <div
      class="sc-cLQEGU lpjGCO"
    >
      <div
        class="sc-gqPbQI irgQAu"
      >
        <div
          class="sc-iujRgT sc-exAgwC cOqTja"
        >
          ERROR
        </div>
        <h4
          class="sc-lkqHmb kgODja"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-hORach jBrJiT"
      >
        <pre
          class="sc-cbkKFq dGaBEI"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-bAeIUo eJjFhh"
      >
        <a
          class="sc-bMVAic kWTfCD"
        >
          <i
            class="sc-kUaPvJ dnTzuZ fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-hMFtBS cxFERH"
  >
    <div
      class="sc-cLQEGU lpjGCO"
    >
      <div
        class="sc-gqPbQI irgQAu"
      >
        <div
          class="sc-iujRgT sc-exAgwC cOqTja"
        >
          ERROR
        </div>
        <h4
          class="sc-lkqHmb kgODja"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-hORach jBrJiT"
      >
        <pre
          class="sc-cbkKFq dGaBEI"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
